@@ -1,41 +1,0 @@
-<html xmlns:tal="http://xml.zope.org/namespaces/tal"
-      xmlns:metal="http://xml.zope.org/namespaces/metal"
-      metal:use-macro="here/main_template/macros/master">
-<body>
-<div metal:fill-slot="main" i18n:domain="cmf_default">
-<tal:block define="dummy python:here.portal_discussion.getDiscussionFor(here)" />
-
-<form method="post" action="talkback"
-      tal:attributes="action string:${here/absolute_url}/talkback">
-<input type="hidden" name=":default_method" value="discussion_reply" />
-
-<table class="FormLayout">
- <tr>
-  <th align="left" i18n:translate="">Subject (Title)</th>
-  <td><input name="title" value=""
-             tal:attributes="value request/form/title|here/title" />
-  </td>
- </tr>
- <tr>
-  <td colspan="2">
-   <b i18n:translate="">Reply body</b><br />
-   <textarea name="text" cols="70" rows="10" wrap="soft" style="width: 100%"
-             tal:content="request/form/text|nothing"></textarea>
-  </td>
- </tr>
- <tr>
-  <td></td>
-  <td>
-   <input type="submit" value="Preview" name=""
-          tal:attributes="name string:${here/getId}/discussion_reply_preview:method"
-          i18n:attributes="value" />
-   <input type="submit" value="Reply" name=""
-          tal:attributes="name string:discussion_reply:method"
-          i18n:attributes="value" />
-  </td>
- </tr>
-</table>
-</form>
-</div>
-</body>
-</html>
