@@ -1,0 +1,39 @@
+<html metal:use-macro="context/main_template/macros/master">
+<body>
+
+<metal:slot metal:fill-slot="main" i18n:domain="cmf_default"
+   tal:define="form options/form">
+<tal:case tal:condition="options/is_preview">
+<h3 tal:content="options/title">TITLE</h3>
+
+<tal:span tal:replace="structure options/cooked_text">Text Body</tal:span>
+</tal:case>
+<form action="discussion_reply_form" method="post"
+   tal:attributes="action form/action"
+><metal:macro metal:use-macro="context/form_widgets/macros/hidden_vars" />
+<table class="FormLayout">
+ <tr tal:condition="not:options/is_preview">
+  <th i18n:translate="">Subject (Title)</th>
+  <td>
+   <input name="title" value="" tal:attributes="value options/title" />
+  </td>
+ </tr>
+ <tr tal:condition="not:options/is_preview">
+  <th i18n:translate="">Reply body</th>
+  <td>
+   <textarea name="text" cols="70" rows="10" wrap="soft" style="width: 100%"
+      tal:content="options/text"></textarea>
+  </td>
+ </tr>
+ <tr>
+  <td>&nbsp;</td>
+  <td>
+   <metal:macro metal:use-macro="context/form_widgets/macros/buttons" />
+  </td>
+ </tr>
+</table>
+</form>
+</metal:slot>
+
+</body>
+</html>
