@@ -128,6 +128,8 @@ CMF 2.0.0-alpha (2006/01/22)
 
   Bug Fixes
 
+    - CMFDefault skins: Refactored and improved discussion_reply_form.
+
     - CMFDefault utils: Fixed html_marshal function.
       The return values are no longer escaped to avoid double quoting and no
       longer stringified. The page templates take care of these steps.
